k8s/metrics-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-exporter
  labels:
    app: metrics-exporter
  namespace: ###_GKE_NAMESPACE###
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrics-exporter
  template:
    metadata:
      labels:
        app: metrics-exporter
    spec:
      containers:
      - name: metrics-exporter
        image: ghcr.io/virtuos/librechat_exporter:2.7.0
        imagePullPolicy: Always
        ports:
        - name: metrics-port
          containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-exporter-service
  labels:
    app: metrics-exporter
  namespace: ###_GKE_NAMESPACE###
spec:
  selector:
    app: metrics-exporter
  ports:
  - name: metrics
    port: 8000
    targetPort: metrics-port
